src/style.css
:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@font-face {
  /* https://fonts.google.com/specimen/Montserrat */
  font-family: "Montserrat";
  src: url(./font/Montserrat-VariableFont_wght.ttf) format("TrueType");
}

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  /* Hide scrollbar for IE, Edge and Firefox */
  section,
  .project-card-wrapper {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }

  /* Hide scrollbar for Chrome, Safari and Opera */
  section::-webkit-scrollbar,
  .project-card-wrapper::-webkit-scrollbar {
    @apply hidden;
  }

  body {
    @apply bg-light dark:bg-dark text-dark dark:text-light;
  }

  body * {
    @apply transition-colors duration-75;
  }

  header,
  footer {
    @apply h-14 w-full px-7 md:px-14 bg-light dark:bg-dark z-50;
  }

  aside {
    @apply h-[calc(100vh-2*56px)] portrait:w-[60vw] mt-14 landscape:pl-[200px] portrait:pr-7 portrait:md:pr-14;
  }

  main {
    @apply w-full my-14;
  }

  section {
    @apply h-[calc(100vh-2*56px)] px-7 portrait:px-0 md:px-14;
  }

  a {
    transition: transform 500ms ease;
  }

  button:disabled {
    @apply text-disabled;
    pointer-events: none;
  }

  h1 {
    @apply text-xl md:text-3xl;
  }
}

@layer components {
  .montserrat {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
  }

  .text-hello {
    @apply text-[10vw] portrait:text-[15vw] leading-[0.8] font-extrabold;
  }

  .text-big {
    @apply text-6xl md:text-7xl leading-[0.8] font-extrabold;
  }

  .text-title {
    @apply text-4xl md:text-5xl leading-[0.8] font-extrabold;
  }

  .text-disabled {
    @apply text-zinc-400 dark:text-zinc-500;
  }

  .btn-dark-mode {
    @apply h-5 md:h-6 aspect-[2] rounded-md shadow-inner;
    transition: background-color 500ms ease;
  }

  .btn-dark-mode.theme-1:hover {
    @apply bg-theme-1;
  }

  .btn-dark-mode.theme-2:hover {
    @apply bg-theme-2;
  }

  .btn-dark-mode.theme-3:hover {
    @apply bg-theme-3;
  }

  .dark-mode-ball {
    @apply h-[calc(100%-4px)] aspect-square mx-0.5 bg-light dark:bg-dark rounded-md;
  }

  .dark-mode-ball {
    transition: transform 750ms ease;
  }

  .dark-mode-ball.dark {
    @apply translate-x-[calc(100%+4px)];
  }

  .icon-mode-dark,
  .icon-mode {
    transition: opacity 75ms ease;
  }

  .icon-mode-dark {
    @apply opacity-0 dark:opacity-100 absolute;
  }

  .icon-mode {
    @apply opacity-100 dark:opacity-0 absolute;
  }

  .icon-contact-link {
    @apply h-[30px] sm:h-[40px] text-[30px] sm:text-[40px] aspect-square;
  }

  .icon-side-link {
    @apply h-[20px] sm:h-[30px] text-[20px] sm:text-[30px] aspect-square;
  }

  .icon-next {
    @apply h-[70px] aspect-square;
    transition: transform 500ms ease;
  }

  button:hover .icon-next {
    @apply scale-110;
  }

  .btn-mini-tab {
    @apply h-3 aspect-[4] border border-light portrait:border-theme-3 dark:border-theme-3 landscape:hover:bg-light landscape:hover:dark:bg-theme-3 hover:bg-opacity-50 hover:dark:bg-opacity-50 rounded-md;
    transition: background-color 500ms ease;
  }

  .btn-mini-tab.active {
    @apply bg-light portrait:bg-theme-3 dark:bg-theme-3;
  }

  .project-card-outer-wrapper {
    @apply w-[60%] p-2 md:p-4 border-2 border-light portrait:border-theme-3 dark:border-theme-3 rounded-md relative overflow-y-hidden;
  }

  .project-card-wrapper {
    @apply flex gap-4 overflow-x-scroll snap-x snap-mandatory scroll-smooth relative;
  }

  .project-card {
    @apply min-w-full bg-light dark:bg-dark rounded-sm flex justify-center items-center snap-center relative;
  }

  .project-card-info {
    @apply h-full flex items-center;
  }

  .project-card-image {
    @apply w-full rounded-sm opacity-50;
  }

  .project-card-index {
    @apply text-5xl md:text-8xl leading-[0.8] font-extrabold absolute top-0 left-0 md:left-2.5;
  }

  .project-card-name-type {
    @apply w-full font-bold text-center flex flex-col absolute top-1/2 -translate-y-1/2;
  }

  .project-card-name {
    @apply text-xl md:text-4xl leading-none relative;
  }

  .project-card-type {
    @apply h-[15px] md:h-[30px] w-full mt-2 md:mt-5 flex justify-center flex-wrap absolute top-full left-1/2 -translate-x-1/2;
  }

  .project-card-type > img {
    @apply h-full opacity-90;
  }

  .project-card-expand {
    @apply w-full py-2 px-4 font-semibold rounded-b-sm absolute bottom-0 opacity-50;
    transition:
      background-color 500ms ease,
      opacity 500ms ease;
  }

  .project-card-expand:hover {
    @apply bg-dark bg-opacity-25 dark:bg-opacity-50 opacity-100;
  }

  .img-arrow-down-wrapper,
  .img-open-wrapper {
    @apply h-[20px] aspect-square relative;
  }

  .project-detail-link-wrapper {
    @apply w-full font-semibold flex justify-center gap-5 md:gap-10;
  }

  .project-detail-link-wrapper > a:not([disabled]) {
    @apply hover:scale-110;
  }

  .project-link {
    @apply flex items-center gap-1;
  }

  .btn-project-card-next {
    @apply h-14 aspect-square bg-dark dark:bg-light bg-opacity-50 -rotate-90 opacity-50 absolute top-[calc(50%-28px)] right-4;
  }

  .btn-project-card-prev {
    @apply h-14 aspect-square bg-dark dark:bg-light bg-opacity-50 rotate-90 opacity-50 absolute top-[calc(50%-28px)] left-4;
  }

  .project-card-image,
  .project-card-index,
  .project-card-name,
  .project-card-type,
  .btn-project-card-next,
  .btn-project-card-prev {
    transition: opacity 500ms ease;
  }

  .project-card-info:hover .project-card-image,
  .btn-project-card-next:hover,
  .btn-project-card-prev:hover {
    @apply opacity-100;
  }

  .project-card-info:hover .project-card-index {
    @apply opacity-50;
  }

  .project-card-info:hover .project-card-name,
  .project-card-info:hover .project-card-type {
    @apply opacity-0;
  }

  .scroll-wrapper {
    @apply flex items-center gap-2 absolute bottom-4 right-3 -translate-y-full translate-x-1/3 -rotate-90;
  }

  .top-wrapper {
    @apply absolute bottom-3 left-4 -translate-y-full -translate-x-1/3 rotate-90;
  }

  .top-wrapper-p {
    @apply absolute bottom-4 right-3 -translate-y-full rotate-90;
  }

  .top-wrapper > div,
  .top-wrapper-p > div {
    transition: transform 500ms ease;
  }

  .top-wrapper:hover > div,
  .top-wrapper-p:hover > div {
    @apply -translate-x-3;
  }

  .underline-h,
  .highlight-h {
    @apply relative;
  }

  .underline-h:after {
    @apply h-0.5 w-0 bg-dark dark:bg-light rounded-full absolute left-0 bottom-0.5;
    content: "";
    transition: width 500ms ease;
  }

  button:hover .underline-h:after {
    @apply w-full;
  }

  .highlight-h:after {
    @apply h-[50%] w-0 opacity-80 absolute top-[25%] left-[-15px] portrait:left-[-10px] -z-10;
    content: "";
    transition: width 500ms ease;
  }

  button:hover .highlight-h:after {
    @apply w-[calc(100%+30px)] portrait:w-[calc(100%+10px)];
  }

  .about-span {
    @apply text-light portrait:text-theme-2 dark:text-theme-2;
  }

  /* Animation */
  [class^="animate-"] {
    will-change: animation;
  }
}

@layer utilities {
  main {
    transition:
      transform 500ms ease,
      opacity 500ms ease;
  }

  aside,
  #btn-menu-l,
  #btn-menu-l-close,
  #btn-menu-l-close > div {
    transition: transform 500ms ease;
  }

  main.move {
    @apply translate-x-[40vw];
  }

  aside.move {
    @apply translate-x-0;
  }

  main.move-p {
    @apply translate-x-[-60vw];
  }

  aside.move-p {
    @apply -translate-x-full;
  }

  #btn-menu-l.show {
    @apply translate-y-[200px];
  }

  #btn-menu-l-close.show {
    @apply translate-x-[200px];
  }

  #btn-menu-l-close:hover > div {
    @apply rotate-180;
  }

  #article-about {
    transition: opacity 500ms ease;
  }

  /* Menu dot */
  button:disabled > div > span {
    @apply opacity-100;
  }

  /* Transitions when enter or exit view */
  .hello,
  .about-logo,
  .projects-logo {
    transform: translateY(100%);
    transition: transform 1s ease;
  }

  .hello.slide-up,
  .about-logo.slide-up,
  .projects-logo.slide-up {
    transform: translateY(0);
  }

  .scroll-wrapper,
  #side-link-wrapper,
  #btn-about-more-l,
  #about-intro,
  #projects-carousel,
  .top-wrapper,
  .about-more-element {
    opacity: 0;
    transition: opacity 1s ease;
  }

  .scroll-wrapper.show,
  #side-link-wrapper.show,
  #btn-about-more-l.show,
  #about-intro.show,
  #projects-carousel.show,
  .top-wrapper.show,
  .about-more-element.show {
    opacity: 1;
  }

  #about-more-photo {
    transform: scale(0);
    transition: transform 1s ease;
  }

  #about-more-photo.expand {
    transform: scale(1);
  }
}

